# amidon2

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build.bat  build.ps1  build.sh
cmake/: m68k-amigaos.cmake
src/: App.cpp  App.h  AsyncHttpService.cpp  AsyncHttpService.h  CacheManager.cpp  CacheManager.h  Constants.h  FdSetCompat.h  HttpClient.cpp  HttpClient.h  HttpRequest.cpp  HttpRequest.h  MastodonAPI.cpp  MastodonAPI.h  NetworkTest.cpp  OsSocket.c  compat.cpp  compat_errno.h  main.cpp  picojson.h
src/logic/: AccountParser.cpp  AccountParser.h  CredsParser.cpp  CredsParser.h  MastodonTypes.h  NotificationParser.cpp  NotificationParser.h  SettingsParser.cpp  SettingsParser.h  TimelineParser.cpp  TimelineParser.h  TootFormatter.cpp  TootFormatter.h  UrlBuilder.cpp  UrlBuilder.h
src/ui/: LoginDialog.cpp  LoginDialog.h  MUIHelpers.cpp  MUIHelpers.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h  WelcomeDialog.cpp  WelcomeDialog.h
tests/: CMakeLists.txt  host_config.h.in  main.cpp  run-tests.sh  test_account.cpp  test_creds.cpp  test_runner.h  test_settings.cpp  test_timeline.cpp  test_toot_format.cpp  test_url_builder.cpp
